@@ -273,17 +273,17 @@ void tst_QNetworkSession::sessionProperties()
                                                  << QLatin1String("WiMAX");
 
     if (!configuration.isValid()) {
-        QVERIFY(configuration.bearerName().isEmpty());
+        QVERIFY(configuration.bearerTypeName().isEmpty());
     } else {
         switch (configuration.type())
         {
             case QNetworkConfiguration::ServiceNetwork:
             case QNetworkConfiguration::UserChoice:
             default:
-                QVERIFY(configuration.bearerName().isEmpty());
+                QVERIFY(configuration.bearerTypeName().isEmpty());
                 break;
             case QNetworkConfiguration::InternetAccessPoint:
-                QVERIFY(validBearerNames.contains(configuration.bearerName()));
+                QVERIFY(validBearerNames.contains(configuration.bearerTypeName()));
                 break;
         }
     }
@@ -1016,15 +1016,15 @@ QNetworkConfiguration suitableConfiguration(QString bearerType, QNetworkConfigur
             discoveredConfigs.removeOne(config);
         } else if ((config.type() == QNetworkConfiguration::InternetAccessPoint) &&
                     bearerType == "cellular") { // 'cellular' bearertype is for convenience
-            if (config.bearerName() != "2G" &&
-                config.bearerName() != "CDMA2000" &&
-                config.bearerName() != "WCDMA" &&
-                config.bearerName() != "HSPA") {
+            if (config.bearerTypeName() != "2G" &&
+                config.bearerTypeName() != "CDMA2000" &&
+                config.bearerTypeName() != "WCDMA" &&
+                config.bearerTypeName() != "HSPA") {
                 // qDebug() << "Dumping config because bearer mismatches (cellular): " << config.name();
                 discoveredConfigs.removeOne(config);
             }
         } else if ((config.type() == QNetworkConfiguration::InternetAccessPoint) && 
-                    bearerType != config.bearerName()) {
+                    bearerType != config.bearerTypeName()) {
             // qDebug() << "Dumping config because bearer mismatches (WLAN): " << config.name();
             discoveredConfigs.removeOne(config);
         }
